Tiny attempts at SEO

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Clyde Mountaineering Club - a Glasgow mountaineering club for those in their 20s and 30s"
+      content="A Glasgow mountaineering and hiking club aimed at younger people in their 20s and 30s"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
